@@ -52,6 +52,7 @@
  * External declarations
  */
 extern	int	do_quiet;
+extern	char	*tearline;
 
 
 
@@ -123,7 +124,7 @@ void F_Help(faddr *t, char *replyid)
 		fprintf(fp, "  %%QUERY\r");
 		fprintf(fp, "  %%LIST\r\r");
 
-		fprintf(fp, "--- MBSE BBS v%s (Linux)\r", VERSION);
+		fprintf(fp, "%s\r", tearline);
 		CloseMail(fp, t);
 		net_out++;
 	} else
@@ -225,7 +226,7 @@ void F_Query(faddr *t, char *replyid)
 		fprintf(qp, " S  - You may send files in this area\r");
 		fprintf(qp, " P  - The file area is temporary paused\r\r");
 		fprintf(qp, "With regards, %s\r\r", CFG.sysop_name);
-		fprintf(qp, "--- MBSE BBS v%s (Linux)\r", VERSION);
+		fprintf(qp, "%s\r", tearline);
 		CloseMail(qp, t);
 		net_out++;
 		free(temp);
@@ -328,7 +329,7 @@ void F_List(faddr *t, char *replyid, int Notify)
 		fprintf(qp, " S  - You may send files in this area\r");
 		fprintf(qp, " P  - The file area is temporary paused\r\r");
 		fprintf(qp, "With regards, %s\r\r", CFG.sysop_name);
-		fprintf(qp, "--- MBSE BBS v%s (Linux)\r", VERSION);
+		fprintf(qp, "%s\r", tearline);
 		CloseMail(qp, t);
 		net_out++;
 		free(temp);
@@ -378,7 +379,7 @@ void F_Status(faddr *t, char *replyid)
 
 		fprintf(fp, "\rWith regards, %s\r\r", CFG.sysop_name);
 
-		fprintf(fp, "--- MBSE BBS v%s (Linux)\r", VERSION);
+		fprintf(fp, "%s\r", tearline);
 		CloseMail(fp, t);
 		net_out++;
 	} else
@@ -480,7 +481,7 @@ void F_Unlinked(faddr *t, char *replyid)
 		fprintf(qp, " S  - You may send files in this area\r");
 		fprintf(qp, " P  - The file area is temporary paused\r\r");
 		fprintf(qp, "With regards, %s\r\r", CFG.sysop_name);
-		fprintf(qp, "--- MBSE BBS v%s (Linux)\r", VERSION);
+		fprintf(qp, "%s\r", tearline);
 		CloseMail(qp, t);
 		net_out++;
 		free(temp);
@@ -941,7 +942,7 @@ int FileMgr(faddr *f, faddr *t, char *replyid, char *subj, time_t mdate, int fla
 			}
 
 			fprintf(np, "\rWith regards, %s\r\r", CFG.sysop_name);
-			fprintf(np, "--- MBSE BBS v%s (Linux)\r", VERSION);
+			fprintf(np, "%s\r", tearline);
 			CloseMail(np, t);
 			net_out++;
 		} else 
