@@ -48,6 +48,7 @@ extern	int		do_quiet;		/* Supress screen output    */
 extern	int		show_log;		/* Show logging		    */
 time_t			t_start;		/* Start time		    */
 time_t			t_end;			/* End time		    */
+char			*tearline;		/* Standard tearline	    */
 
 
 
@@ -82,6 +83,7 @@ void die(int onsig)
 		colour(7, 0);
 		printf("\n");
 	}
+	free(tearline);
 	ExitClient(onsig);
 }
 
@@ -105,6 +107,17 @@ int main(int argc, char **argv)
 	Miy = t->tm_mon;
 	umask(002);
 
+        tearline = calloc(41, sizeof(char *));
+#ifdef __linux__
+	sprintf(tearline, "--- MBSE BBS v%s (Linux)", VERSION);
+#elif __FreeBSD__
+	sprintf(tearline, "--- MBSE BBS v%s (FreeBSD)", VERSION);
+#elif __NetBSD__
+	sprintf(tearline, "--- MBSE BBS v%s (NetBSD)", VERSION);
+#else
+	sprintf(tearline, "--- MBSE BBS v%s (Unknown)", VERSION);
+#endif
+	
 	/*
 	 * Catch all signals we can, and ignore the rest.
 	 */
