@@ -93,6 +93,7 @@ time_t	t_end;				/* End time			    */
 int	packets    = 0;			/* Tossed packets		    */
 int	packets_ok = 0;			/* Tossed packets Ok.		    */
 char	*envptr = NULL;
+char	*tearline;			/* Standard tearline for mail	    */
 
 extern	int net_in, net_imp, net_out, net_bad;
 extern	int echo_in, echo_imp, echo_out, echo_bad, echo_dupe;
@@ -241,6 +242,7 @@ void die(int onsig)
 
 	if (!do_quiet)
 		colour(7, 0);
+	free(tearline);
 	ExitClient(onsig);
 }
 
@@ -302,6 +304,17 @@ int main(int argc, char **argv)
 	Diw = t->tm_wday;
 	Miy = t->tm_mon;
 	umask(002);
+
+	tearline = calloc(41, sizeof(char *));
+#ifdef __linux__
+	sprintf(tearline, "--- MBSE BBS v%s (Linux)", VERSION);
+#elif __FreeBSD__
+	sprintf(tearline, "--- MBSE BBS v%s (FreeBSD)", VERSION);
+#elif __NetBSD__
+	sprintf(tearline, "--- MBSE BBS v%s (NetBSD)", VERSION);
+#else
+	sprintf(tearline, "--- MBSE BBS v%s (Unknown)", VERSION);
+#endif
 
 	/*
 	 * Catch all the signals we can, and ignore the rest.
